app/globals.css
@import "tailwindcss";

@keyframes marquee {
  0% {
    transform: translateX(0);
  }

  100% {
    transform: translateX(-50%);
  }
}

@theme inline {
  --font-sans: var(--font-hind-siliguri);
  --color-primary: #F42A41;
  --color-secondary: #006A4E;
  --color-background: var(--background);
  --color-foreground: var(--foreground);
}

:root {
  --background: #f8f9fa;
  /* Light mode bg slightly off-white */
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #1A1A1A;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans);
}

